--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,47 @@
-#card-section{background-color:purple; width:100%; margin-bottom:30px;
-  margin-top:30px; height:77%; }
-.discount-card{background-color:black; width:100%; height:170px;
-  margin-top:30px;}
-.parties{background-color:black; width:100%; height:170px;
-   margin-top:30px;}
-.food{background-color:black; width:100%; height:170px;
-   margin-top:30px;}
+.main-content-area{text-align: center; height:150px; display: flex;
+  justify-content: center; align-items: center;}
 
-.venue-banner{width:100%;  height:150px; background-color:red;}
-.social-banner{ width:100%; margin-top:30px; height:150px;  background-color:blue;}
+.discount-card{width:100%; background-color:red; height:150px; display: flex;
+  justify-content: center;
+  align-items: center;}
+.parties{width:100%; background-color:red; height:150px; margin-top: 30px; display: flex;
+  justify-content: center;
+  align-items: center;}
+.food{width:100%; background-color:red; height:150px; margin-top: 30px; display: flex;
+  justify-content: center;
+  align-items: center;}
+
+.venue-bar{width:100%; height:200px; background-color:red; margin-top:30px; display: flex;
+  justify-content: center;
+  align-items: center;}
+
+.social-bar{width:100%; height:200px; background-color:red; margin-top:30px; display: flex;
+  justify-content: center;
+  align-items: center;}
 
 
 
-/*Small devices (landscape phones, 576px and up*/
-@media (min-width: 576px) {
-#card-section{height:76%; }
-}
+  		@media (min-width: 576px) {
+  		  .parties{margin-top:30px;}
+  		 }
 
-/*Medium devices (tablets, 768px and up*/
-@media (min-width: 768px) {
-  #card-section{height:28%; }
-}
 
-/*Large devices (desktops, 992px and up*/
-@media (min-width: 992px) {
-  #card-section{height:38%; }
-  .discount-card{height:250px;}
-  .parties{height:250px;}
-  .food{height:250px;}
-}
+  		@media (min-width: 768px) {
+  		.discount-card{margin-top:0px; height:200px;}
+  		.parties{margin-top:0px; height:200px;}
+  		.food{margin-top:0px; height:200px;}
+  		}
 
-/*Extra large devices (large desktops, 1200px and up*/
-@media (min-width: 1200px) {
-    #card-section{height:45%; }
-  .discount-card{height:300px;}
-  .parties{height:300px;}
-  .food{height:300px;}
-}
+
+  		@media (min-width: 992px) {
+  		.discount-card{margin-top:0px; height:250px;}
+  		.parties{margin-top:0px; height:250px;}
+  		.food{margin-top:0px; height:250px;}
+  		}
+
+
+  		@media (min-width: 1200px) {
+  		.discount-card{margin-top:0px; height:300px;}
+  		.parties{margin-top:0px; height:300px;}
+  		.food{margin-top:0px; height:300px;}
+  		}
