--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,154 @@
-.main-content-area{text-align: center; height:150px; display: flex;
-  justify-content: center; align-items: center;}
-
-.discount-card{width:100%; background-color:red; height:150px; display: flex;
+.main-content-area {
+  text-align: center;
+  height: 150px;
+  display: flex;
   justify-content: center;
-  align-items: center;}
-.parties{width:100%; background-color:red; height:150px; margin-top: 30px; display: flex;
+  align-items: center;
+}
+
+.discount-card {
+  width: 100%;
+  background-color: red;
+  height: 150px;
+  display: flex;
   justify-content: center;
-  align-items: center;}
-.food{width:100%; background-color:red; height:150px; margin-top: 30px; display: flex;
+  align-items: center;
+}
+
+.parties {
+  width: 100%;
+  background-color: red;
+  height: 150px;
+  margin-top: 30px;
+  display: flex;
   justify-content: center;
-  align-items: center;}
+  align-items: center;
+}
 
-.venue-bar{width:100%; height:200px; background-color:red; margin-top:30px; display: flex;
+.food {
+  width: 100%;
+  background-color: red;
+  height: 150px;
+  margin-top: 30px;
+  display: flex;
   justify-content: center;
-  align-items: center;}
+  align-items: center;
+}
 
-.social-bar{width:100%; height:200px; background-color:red; margin-top:30px; display: flex;
+.venue-bar {
+  width: 100%;
+  height: 200px;
+  background-color: red;
+  margin-top: 30px;
+  display: flex;
   justify-content: center;
-  align-items: center;}
+  align-items: center;
+  flex-direction: column;
+}
+
+.venue-bar button {
+  border-radius: 25px;
+  border: none;
+  background-color: darkred;
+  color: white;
+  padding: 5px 10px 5px 10px;
+  font-size: 13px;
+  margin-top: 15px;
+}
+
+.social-bar {
+  width: 100%;
+  height: 200px;
+  background-color: red;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-bar button {
+  border-radius: 25px;
+  border: none;
+  background-color: darkred;
+  color: white;
+  padding: 5px 10px 5px 10px;
+  font-size: 13px;
+  margin-top: 15px;
+}
+
+footer {
+  background-color: black;
+  width: 100%;
+  height: auto;
+  color: white;
+  padding: 30px;
+}
+
+.footer-left {
+  border-right: 2px dashed lightgrey;
+  height: 100%;
+  padding: 20px;
+}
+
+.footer-right {
+  border-left: 2px dashed lightgrey;
+  height: 100%;
+  padding: 20px;
+}
 
 
+.facebook-icon {
+  width: 35px;
+  height: 35px;
+  margin-left: 10px;
+}
 
-  		@media (min-width: 576px) {
-  		  .parties{margin-top:30px;}
-  		 }
+.linkedin-icon {
+  width: 35px;
+  height: 35px;
+  margin-left: 10px;
+}
+
+.container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+		@media (min-width: 576px) {
+		  .parties{margin-top:30px;}
+
+		.footer-middle{padding:20px;}
+		 }
 
 
-  		@media (min-width: 768px) {
-  		.discount-card{margin-top:0px; height:200px;}
-  		.parties{margin-top:0px; height:200px;}
-  		.food{margin-top:0px; height:200px;}
-  		}
+		@media (min-width: 768px) {
+		.discount-card{margin-top:0px; height:200px;}
+		.parties{margin-top:0px; height:200px;}
+		.food{margin-top:0px; height:200px;}
+
+		.footer-middle{padding:20px;}
+
+		}
 
 
-  		@media (min-width: 992px) {
-  		.discount-card{margin-top:0px; height:250px;}
-  		.parties{margin-top:0px; height:250px;}
-  		.food{margin-top:0px; height:250px;}
-  		}
+		@media (max-width:768px){
+
+		.footer-left{border-right:none;}
+		.footer-right{border-left:none;}
+		.footer-middle{}
+		}
 
 
-  		@media (min-width: 1200px) {
-  		.discount-card{margin-top:0px; height:300px;}
-  		.parties{margin-top:0px; height:300px;}
-  		.food{margin-top:0px; height:300px;}
-  		}
+		@media (min-width: 992px) {
+		.discount-card{margin-top:0px; height:250px;}
+		.parties{margin-top:0px; height:250px;}
+		.food{margin-top:0px; height:250px;}
+		}
+
+
+		@media (min-width: 1200px) {
+		.discount-card{margin-top:0px; height:300px;}
+		.parties{margin-top:0px; height:300px;}
+		.food{margin-top:0px; height:300px;}
+		}
