--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+/*
+display:flex; - on the conatainer of the element to give it properties to the children
+justify content:center - center things horizontally but only if display flex is on parent
+align-items:center; - center things vertically
+flex-direction:column; - chooses the flow of content from either row or coloumn
+
+:nth-child(1) - a way to specifcally select the number of child elements deep
+using the (1) feature 
+
+
+
+*/
+
+
+
+
+
+
 /* globals */
   .container-fluid{padding-left:0px; padding-right:0px;}
   .jumbotron{height:450px; display:flex; align-items: flex-end; color:white; background-attachment:fixed; background-repeat:no-repeat; 
@@ -57,14 +75,17 @@
   .faq-page{background-image:url('img/faqBanner.jpg');}
   .parties-page{background-image:url('img/PartiesBanner.jpg');}
   .discount-page{background-image:url('img/DiscountBanner.jpg');}
+  .venue-page{background-image:url('img/venuesBanner.jpg');}
   footer{background-color:#731320; height:auto; width:100%; margin-top:30px; padding:30px; color:white;}
   button{border-radius:25px; border:none; background-color:#4A4848 ; color:white; padding:10px 20px 10px 20px; font-size:13px;}
   hr{border:3px dashed lightgrey; width:100%;}
   iframe{border:10px solid #731320;}
 
 /* home */
- .main-content-area{text-align: center; height:150px; display: flex;
+ .main-content-area{text-align: center; margin-top:30px; margin-bottom:30px; display: flex;
     justify-content: center; align-items: center; flex-direction: column; color:black;}
+
+
 
 .discount-card{width:100%; background-color:#731320; height:150px; display: flex;
     justify-content: center;
@@ -80,10 +101,19 @@
     background-position:center; background-size: cover;  margin-top:30px; display: flex;
     justify-content: center;
     align-items: center; flex-direction:column;  color:white;}
+.venue-dropdown-content{display: flex; justify-content:center; display:none;}
+.venue-content:nth-child(1){margin-left:0px;}
+.venue-content{margin-left: 30px;}
+
 .social-bar{width:100%; height:200px; background-image:url('img/socialBanner.jpg');  background-attachment:fixed; background-repeat:no-repeat; 
     background-position:center; background-size: cover; margin-top:30px; display: flex;
     justify-content: center;
     align-items: center; flex-direction:column; color:white;}
+.social-dropdown-content{display: flex; justify-content:center; flex-direction:column; display:none;}
+.social-content:nth-child(1){margin-left:0px;}
+.social-content{margin-left: 30px;}
+
+
 .social-facebook-icons{background-color:}
 
 .footer-left{border-right:2px dashed lightgrey; height:100%; padding:20px;}
@@ -103,6 +133,8 @@
     .events-section h3{padding-bottom: 30px; padding-top: 30px;}
     .events-section p:nth-child(2){padding-bottom:30px;}
 
+    .locations{padding:30px;}
+    .locations h3{font-size:40px;}
     .location-one{background-color:#731320; margin-bottom:30px; color:white;}
     .location-two{background-color:#731320; margin-bottom:30px; color:white;}
     .location-three{background-color:#731320; margin-bottom:30px; color:white;}
@@ -116,7 +148,18 @@
 
 /* live sports page */
 	.sports-on{display: flex; justify-content: center; padding-top: 30px; padding-bottom:30px;}
-    .sportsArea{height:550px; width:100%; background-color:#731320; color:white;}
+    .sportsArea{height:350px; width:100%; background-color:#731320; color:white;}
+    #sports{text-align: center;}
+
+#APIArea table tbody:nth-child(1) tr{border-bottom:5px solid white; 
+  font-size:30px;}
+
+#APIArea table tbody tr{border-bottom:2px dashed white; 
+  }
+
+
+
+
 
 /* food page */ 
 	  .menu-selection{display: flex; justify-content: center; background-color:#731320; padding-top: 30px; padding-bottom:30px;}
@@ -157,6 +200,7 @@
 
 /* venues page */
 .venue-loctions{display:flex; flex-direction:column;align-items: center;}
+.venue-loctions iframe{width:100%; height:450px;}
 .venue-loction-one{}
 .venue-loction-two{}
 .venue-loction-three{}
