--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /*
+KEY/LEGEND 
 display:flex; - on the conatainer of the element to give it properties to the children
 justify content:center - center things horizontally but only if display flex is on parent
 align-items:center; - center things vertically
@@ -6,22 +7,17 @@ flex-direction:column; - chooses the flow of content from either row or coloumn
 
 :nth-child(1) - a way to specifcally select the number of child elements deep
 using the (1) feature 
-
-
-
 */
 
-
-
-
-
-
-/* globals */
+/* globals */ /* backgroun no repeat normally would repeat but it specifies to not repeat*/
+/*background-size: cover specifies to fill the whole container even if it is trimmed or section of it is lost */
+/*backgroun attachment is used to set whether the image should scrool with the page, the Fixed vakue specifies that it should not */
   .container-fluid{padding-left:0px; padding-right:0px;}
   .jumbotron{height:450px; display:flex; align-items: flex-end; color:white; background-attachment:fixed; background-repeat:no-repeat; 
-      background-position:center; background-size: cover; position:relative;}
+      background-position:center; background-size: cover; position:relative;} 
   
   /* homepage carousel */
+/*z-index specifies the stack order of the elements */
   .home-page-slider{position: relative; width:100%; height:450px;}
   .home-page-slider h1{position:absolute; top:60%; z-index:150; color: white;}
   .home-page-slider p{position:absolute; top:73%; z-index:150; color: white;}
@@ -29,21 +25,21 @@ using the (1) feature
     width: 100%;
     height:450px;
     position: absolute;
-    background-image:url(img/cara1banner.jpg);
+    background-image:url(img/cara1banner.jpg); /*url specifies the path */
     color:white;
     padding-top: 23%;
-    z-index:100;
+    z-index:100; /*this image is first due to the higher z-index number */
     box-sizing: border-box;
 }
 .home-page-two {
     width: 100%;
     height:450px;
-    position: absolute;
+    position: absolute; 
     background-image:url(img/cara2banner.jpg);
     color:white;
     padding-top: 23%;
     z-index:75 ;
-    box-sizing: border-box;
+    box-sizing: border-box; /*this allows for the padding and border of an element to be taken into and elements total sizing */
 }
 .home-page-three {
     width: 100%;
@@ -53,7 +49,7 @@ using the (1) feature
     color:white;
     padding-top: 23%;
     z-index: 50;
-    box-sizing: border-box;
+    box-sizing: border-box; /*allows for a consistent design with elements so everything is nice and the same */
 }
 .home-page-four{
     width: 100%;
@@ -66,7 +62,7 @@ using the (1) feature
     box-sizing: border-box;
 }
 
-
+/*background banne images for most pages */
   .food-page{background-image:url('img/foodBanner.jpg');}
   .livesports-page{background-image:url('img/ballBanner.jpg');}
   .events-page{background-image:url('img/eventsBanner.jpg');}
@@ -79,11 +75,12 @@ using the (1) feature
   footer{background-color:#731320; height:auto; width:100%; margin-top:30px; padding:30px; color:white;}
   button{border-radius:25px; border:none; background-color:#4A4848 ; color:white; padding:10px 20px 10px 20px; font-size:13px;}
   hr{border:3px dashed lightgrey; width:100%;}
-  iframe{border:10px solid #731320;}
+  iframe{border:5px solid #731320;}
 
 /* home */
  .main-content-area{text-align: center; margin-top:30px; margin-bottom:30px; display: flex;
     justify-content: center; align-items: center; flex-direction: column; color:black;}
+#caraFix {margin-top:40px;}
 
 
 
@@ -97,14 +94,18 @@ using the (1) feature
     justify-content: center;
     align-items: center; color:white;}
 
+/* venue bar */ 
 .venue-bar{width:100%; height:200px; background-image:url('img/venuesBanner.jpg'); background-attachment:fixed; background-repeat:no-repeat; 
     background-position:center; background-size: cover;  margin-top:30px; display: flex;
     justify-content: center;
     align-items: center; flex-direction:column;  color:white;}
 .venue-dropdown-content{display: flex; justify-content:center; display:none;}
+/* :nth-child(1) - a way to specifcally select the number of child elements deep
+using the (1) feature */
 .venue-content:nth-child(1){margin-left:0px;}
 .venue-content{margin-left: 30px;}
 
+/* social bar is the same as the venue bar*/
 .social-bar{width:100%; height:200px; background-image:url('img/socialBanner.jpg');  background-attachment:fixed; background-repeat:no-repeat; 
     background-position:center; background-size: cover; margin-top:30px; display: flex;
     justify-content: center;
@@ -115,8 +116,8 @@ using the (1) feature
 
 
 .social-facebook-icons{background-color:}
-
-.footer-left{border-right:2px dashed lightgrey; height:100%; padding:20px;}
+/*Dashed lightgrey is for the border styling and specifies the style along side the color this is founf in FAQ and other pages*/
+.footer-left{border-right:2px dashed lightgrey; height:100%; padding:20px;} 
 .footer-right{ border-left:2px dashed lightgrey; height:100%; padding:20px;}
 .instagram-icon{width:35px; height:35px;}
 .facebook-icon{width:35px; height:35px; margin-left:10px;}
@@ -207,7 +208,8 @@ using the (1) feature
 .venue-loction-four{}
 
 
-/* media queries */
+/* media queries to specify a breakpoint in the page  */
+/*this allows for a responsive design to be made and for the page to behave differently  */ 
 @media (min-width: 576px) { 
   .parties{margin-top:30px;}
 
